# tapl-lang

./: README.md  pyproject.toml
.github/workflows/: publish-vscode-extension.yml
examples/: basic_variables.tim  classes.tim  collections.tim  current_functionality.tim  files.tim  functions.tim  print_example.tim  timplates.tim
examples/module_example/: included.tim  main.tim
examples/module_example/nested/: file.tim
src/compilers/compyler/: __main__.py  ast_generator.py  code_generator.py  tokenizer.py
src/compilers/compyler/ast_checks/: ast_check.py  pass_base.py  scoping_pass.py  typing_pass.py
src/compilers/compyler/backends/: c_backend_code_generator.py  c_backend_expression_visitor.py  c_backend_state.py  c_backend_statement_visitor.py
src/compilers/compyler/errors/: module_error.py  typing_error.py  visitor_error.py
src/compilers/compyler/expressions/: binary_expression.py  call_expression.py  enum_value_expression.py  expression.py  identifier_expression.py  string_equal_expression.py  string_expression.py  this_expression.py  token_expression.py  type_cast_expression.py  unary_expression.py
src/compilers/compyler/module/: modularize_folder.py  module.py  module_file.py  module_map.py  raw_import.py
src/compilers/compyler/statements/: assignment_statement.py  break_statement.py  breakall_statement.py  class_statement.py  constructor_function_statement.py  continue_statement.py  enum_statement.py  statement.py  (+13 more)
src/templates/: list.h
tools/vscode/tapl-lang/: CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json
(+35 files in other folders)
