[project]
name = "tapl"
version = "0.1.0"
description = "Tim's Awesome Programming Language - Including the Compilers"
authors = ["Tim Klein Nijenhuis <tim@hetorus.nl>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.black]
line-length = 120

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-watcher>=0.6.3",
]
